car.html car.js modified.

--- a/car.html
+++ b/car.html
@@ -28,6 +28,7 @@
                 <button onclick="accel()">アクセル</button>
                 <button onclick="brake()">ブレーキ</button>
                 <div> 速度: <span id="speed"></span></div>
+                <div><span id="err-mes"></span></div>
             </div>
             
         </article>
