meter image added.

--- a/car.html
+++ b/car.html
@@ -16,13 +16,9 @@
                 <section class="view-area">
                 </section>
                 <section class="drive-area clearfix">
-                    <div class="left">
-                        <button class="wide-button" onclick="status()"> STATUS </button>
-                        <div id="car-make"></div>
-                        <div id="car-model"></div>
-                        <div id="car-gear"></div>
+                    <div id="meter">
+                        <img src="0.jpg" alt="">
                     </div>
-                    
                     <div class="right">
                         <button class="small-button" onclick="shift_p()"> P </button>
                         <button class="small-button" onclick="shift_r()"> R </button>
@@ -34,6 +30,13 @@
                         <div> 速度: <span id="speed"></span></div>
                         <div><span id="err-mes"></span></div>
                     </div>
+                    <div class="left">
+                        <button class="wide-button" onclick="status()"> STATUS </button>
+                        <div id="car-make"></div>
+                        <div id="car-model"></div>
+                        <div id="car-gear"></div>
+                    </div>
+                    
                 </section>
             </article>
             <footer>
