shift-rever added.

--- a/car.html
+++ b/car.html
@@ -19,6 +19,9 @@
                     <div id="meter">
                         <img src="0.jpg" alt="">
                     </div>
+                    <div id="shift">
+                        <img src="P.jpg" alt="">
+                    </div>
                     <div class="right">
                         <button class="small-button" onclick="shift_p()"> P </button>
                         <button class="small-button" onclick="shift_r()"> R </button>
