--- a/car.html
+++ b/car.html
@@ -5,7 +5,6 @@
         <title>car</title>
         <meta name="viewport" content="width=device-width; initial-scale=1.0" />
         <link rel="stylesheet" href="car.css">
-
     </head>
     <body>
         <div id="wrap">
@@ -14,30 +13,36 @@
             </header>
             <article>
                 <section class="view-area">
+                    <video src="wangan.mp4" id="drive-video" autoplay>
                 </section>
                 <section class="drive-area clearfix">
-                    <div id="meter">
-                        <img src="0.jpg" alt="">
-                    </div>
-                    <div id="shift">
-                        <img src="P.jpg" alt="">
-                    </div>
                     <div class="right">
-                        <button class="small-button" onclick="shift_p()"> P </button>
-                        <button class="small-button" onclick="shift_r()"> R </button>
-                        <button class="small-button" onclick="shift_n()"> N </button>
-                        <button class="small-button" onclick="shift_d()"> D </button>
-                        <div> ギヤ: <span id="now-gear"></span></div>
-                        <button class="wide-button" onclick="accel()">アクセル</button>
-                        <button class="wide-button" onclick="brake()">ブレーキ</button>
-                        <div> 速度: <span id="speed"></span></div>
-                        <div><span id="err-mes"></span></div>
+                        <div id="shift">
+                            <img src="P.jpg" alt="" width="110px" height="178px">
+                        </div>
+                        <div class="lever">
+                            <button class="lever-button" onclick="shift_p()"> P </button>
+                            <button class="lever-button" onclick="shift_r()"> R </button>
+                            <button class="lever-button" onclick="shift_n()"> N </button>
+                            <button class="lever-button" onclick="shift_d()"> D </button>
+                        </div>
                     </div>
                     <div class="left">
+                        <div id="meter">
+                            <img src="0.jpg" alt="" width="160px" height="100px">
+                        </div>
+                        <div class="pedal">
+                            <button class="wide-button" onclick="accel()">アクセル</button>
+                            <button class="wide-button" onclick="brake()">ブレーキ</button>
+                        </div>
+                    </div>
+                    <div class="status">
                         <button class="wide-button" onclick="status()"> STATUS </button>
                         <div id="car-make"></div>
                         <div id="car-model"></div>
-                        <div id="car-gear"></div>
+                        <div><span id="err-mes"></span></div>
+                        <div> ギヤ: <span id="now-gear"></span></div>
+                        <!-- <div> 速度: <span id="speed"></span></div> -->
                     </div>
                     
                 </section>
